--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
@@ -155,7 +155,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="Tiền đặt cọc" Grid.Column="0" Margin="30 20"/>
-                                        <TextBox Text="{Binding TiecMoi.TienDatCoc}" Grid.Column="1"  Margin="0 20"/>
+                                        <TextBox Text="{Binding TiecMoi.TienDatCoc, StringFormat=N0}" Grid.Column="1"  Margin="0 20"/>
                                     </Grid>
 
                                     <Grid Margin="0 5">
