--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
@@ -11,7 +11,7 @@
     <!-- Viewbox giúp co giãn toàn bộ giao diện theo kích thước khung -->
     <Viewbox Stretch="Uniform">
         <Grid Width="1600" Height="1000">
-            <Border BorderBrush="#673500" Background="#ffffee" BorderThickness="3" CornerRadius="40" Margin="20">
+            <Border BorderBrush="#673500" Background="#ffffee" BorderThickness="2" CornerRadius="40">
                 <Grid Margin="20">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
