--- a/QuanLyTiecCuoi/MVVM/View/BaoCao/ChiTietBaoCaoView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/BaoCao/ChiTietBaoCaoView.xaml
@@ -19,16 +19,15 @@
         </Style>
     </Page.Resources>
 
-    <Border CornerRadius="20"
+    <Border CornerRadius="40"
             BorderBrush="Black"
             BorderThickness="2"
-            Margin="15"
             Background="White"
             SnapsToDevicePixels="True">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.6*" />
-                <ColumnDefinition Width="0.4*" />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="0.5*" />
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
@@ -130,7 +129,7 @@
                                        FontSize="25"
                                        Style="{StaticResource Header4Style}" />
                             <TextBlock Text="{Binding TongDoanhThuFormatted}"
-                                       Margin="10"
+                                       
                                        VerticalAlignment="Center"
                                        FontSize="25"
                                        Style="{StaticResource Header4Style}" />
@@ -142,7 +141,7 @@
                                        FontSize="25"
                                        Style="{StaticResource Header4Style}" />
                             <TextBlock Text="{Binding TongTiecCuoi}"
-                                       Margin="10"
+                                       
                                        VerticalAlignment="Center"
                                        FontSize="25"
                                        Style="{StaticResource Header4Style}" />
@@ -188,43 +187,39 @@
             <!-- Nút in + quay lại -->
             <Grid Grid.Row="4"
                   Grid.Column="1"
-                  HorizontalAlignment="Center"
-                  Margin="0,5,0,10"
-                  Width="440">
+                  Margin="0,5,5,10">
                 <!-- chiều rộng vừa đủ chứa 2 nút -->
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200" />
-                    <ColumnDefinition Width="40" />
+                    <ColumnDefinition Width="0.65*" />
                     <!-- Khoảng cách giữa 2 nút -->
-                    <ColumnDefinition Width="200" />
+                    <ColumnDefinition Width="0.35*" />
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0"
-                        Width="200"
+                        Width="170"
                         Height="50"
                         Content="In báo cáo"
-                        FontSize="30"
                         FontFamily="Cambria"
                         FontWeight="Bold"
+                        HorizontalAlignment="Right"
                         Background="LightGray"
                         Command="{Binding PrintCommand}">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                                    CornerRadius="20"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}">
-                                <ContentPresenter HorizontalAlignment="Center"
-                                                  VerticalAlignment="Center"
-                                                  RecognizesAccessKey="True" />
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
+                    <Button.Style>
+                        <Style BasedOn="{StaticResource ButtonStyle}"
+                               TargetType="Button">
+                            <Setter Property="FontSize"
+                                    Value="30" />
+                            <Setter Property="FontWeight"
+                                    Value="Bold" />
+                            <Setter Property="FontFamily"
+                                    Value="Cambria" />
+                        </Style>
+                    </Button.Style>
                 </Button>
 
-                <Button Grid.Column="2"
-                        Width="200"
+                <Button Grid.Column="1"
+                        Width="170"
                         Height="50"
                         Content="Quay lại"
                         FontSize="30"
@@ -232,18 +227,17 @@
                         FontWeight="Bold"
                         Background="LightGray"
                         Command="{Binding ReturnCommand}">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                                    CornerRadius="20"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}">
-                                <ContentPresenter HorizontalAlignment="Center"
-                                                  VerticalAlignment="Center"
-                                                  RecognizesAccessKey="True" />
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
+                    <Button.Style>
+                        <Style BasedOn="{StaticResource ButtonStyle}"
+                               TargetType="Button">
+                            <Setter Property="FontSize"
+                                    Value="30" />
+                            <Setter Property="FontWeight"
+                                    Value="Bold" />
+                            <Setter Property="FontFamily"
+                                    Value="Cambria" />
+                        </Style>
+                    </Button.Style>
                 </Button>
             </Grid>
 
