--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
@@ -161,7 +161,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="Tiền đặt cọc" Grid.Column="0" Margin="30 20"/>
-                                        <TextBox Text="{Binding TiecMoi.TienDatCoc, StringFormat=N0}" Grid.Column="1" GotFocus="TextBox_GotFocus" Margin="0 20"/>
+                                        <TextBox Text="{Binding TiecMoi.TienDatCoc, StringFormat=N0}" IsReadOnly="True" Grid.Column="1" GotFocus="TextBox_GotFocus" Margin="0 20"/>
                                     </Grid>
 
                                     <Grid Margin="0 5">
